Finished file, added images

--- a/index.html
+++ b/index.html
@@ -7,16 +7,39 @@
 <body>
   <header>
     <!-- logo, site name, main nav -->
-  
+    <img src="images/tree-logo.jpg" alt="erin's logo" />
+    <h1>Dyslexia Advocacy Tucson</h1>
+    <nav>
+      <a href="#">Other Page</a>
+      
+    </nav>
   </header>
   <article>
     <!-- headline article(text) and nice image -->
+    <h2>How Stuff Works</h2>
+    <p>Things work like stuff. </p>
+    <blockquote>"I love stuff." - not Albert Einstein</blockquote>
+    <p>The world is full of stuff.</p>
+    <figure>
+      <img src="images/dyslexia.jpg" />
+      <figcaption>Dyslexia makes stuff hard to understand</figcaption>
+    </figure>
+   
   </article>
   <aside>
     <!-- author blurb image and related link -->
+    <h2>About The Author</h2>
+    <p>Erin Stone lives in Tucson,AZ and is the mother to 2 kids, both gifted, one dyslexic. She has attended various conferences,including Wright's Law, and successfully advocated for her dyslexic child. She is available for one hour free advocacy consults. </p>
+    <img src="images/erin-stone.jpg" alt="Erin Stone" />
+    <ul>
+      <li><a href="http://www.ncld.org/types-learning-disabilities/dyslexia/what-is-dyslexia">What is Dyslexia</a></li>
+      <li><a href="http://www.interdys.org/">International Dyslexia Association</a></li>
+      <li><a href="http://www.bartonreading.com/">Barton Reading &amp; Spelling</a></li>
+    </ul>
   </aside>
   <footer>
     <!-- copyright info -->
+    <p>Copyright 2014 <a href="mailto:kidzintow@gmail.com">Dyslexia Advocacy Tucson</a></p>
   </footer>
 </body>
 
